tests/vertical-slice/accept/option_unwrap_none_aborts.hew
fn main() {
    let opt: Option<i64> = None;
    let v = opt.unwrap();
    println(v);
}
