tests/vertical-slice/reject/duplex_weak_non_send.hew
fn main() {
    let _worker = actor |msg: Weak<i64>| {
        let _ = msg.clone();
    };
}
